--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,16 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  http: ^0.12.0+2
+  flutter_webview_plugin: ^0.3.3
+  shared_preferences: ^0.5.2
+  event_bus: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 flutter:
-
   uses-material-design: true
   assets:
     #导航栏图标
@@ -30,4 +32,7 @@ flutter:
     - assets/images/ic_nav_my_pressed.png
     #抽屉背景
     - assets/images/cover_img.jpg
+    #用户默认头像
+    - assets/images/ic_avatar_default.png
+
 
