--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_webview_plugin: ^0.3.3
   shared_preferences: ^0.5.2
   event_bus: ^1.1.0
+  barcode_scan: ^0.0.3
+  sensors: ^0.4.0+1
 
 dev_dependencies:
   flutter_test:
@@ -34,5 +36,7 @@ flutter:
     - assets/images/cover_img.jpg
     #用户默认头像
     - assets/images/ic_avatar_default.png
+    #摇一摇背景图
+    - assets/images/shake.png
 
 
