--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,11 @@
 buildscript {
-    ext.kotlin_version = '1.3.0'
+//    ext.kotlin_version = '1.3.10'
+//    ext.kotlin_version = '1.3.72'
+//    ext.kotlin_version = '1.4.32'
+//    ext.kotlin_version = '1.7.10'
+//    ext.kotlin_version = '1.6.0'
+//    ext.kotlin_version = '1.5.0'
+    ext.kotlin_version = '1.5.31'
     repositories {
         google()
         jcenter()
@@ -7,7 +13,11 @@ buildscript {
 
     dependencies {
 //        classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath 'com.android.tools.build:gradle:3.3.0'
+//        classpath 'com.android.tools.build:gradle:3.3.0'
+//        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath "com.android.tools.build:gradle:3.6.3"
+//        classpath "com.android.tools.build:gradle:7.3.0"
+
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
