--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_webview_plugin: ^0.3.3
   shared_preferences: ^0.5.2
   event_bus: ^1.1.0
-  barcode_scan: ^1.0.0
+#  barcode_scan: ^1.0.0
   sensors: ^0.4.0+1
   vibration: 1.0.2
   image_picker: ^0.5.0+9
